--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <!-- header section -->
 
     <header>
-        <h1>Dhaka,Bangladesh</h1>
+        <h1>Islamic Bank Limited</h1>
+        
     </header>
     <!-- main section -->
 
@@ -33,7 +34,7 @@
         <div class="input-card-container">
           <div class="input-card">
             <h1>Deposit Money</h1>
-            <p>যত পারিস জমা দে</p>
+            <br>
             <div>
                 <input type="text" id="deposit-value" />
                 <button class="bg-green" onclick="deposit()">Deposit</button>
@@ -41,7 +42,7 @@
             </div>
             <div class="input-card">
               <h1>Withdraw Money</h1>
-              <p>খবরদার, টাকা তুলবিনা।</p>
+              <br>
               <div>
                 <input type="text" id="withdraw-value" />
                 <button onclick="withdraw()" class="bg-red">Withdraw</button>
